[package]
name = "aster-proxy"
version = "1.3.3"
authors = ["wayslog <zxs867179@gmail.com>"]
description = "A light, fast and powerful cache proxy written in Rust."
homepage = "https://github.com/wayslog/aster"
repository = "https://github.com/wayslog/aster"
documentation = "https://docs.rs/aster"
license = "MIT"
readme = "README.md"
categories = ["asynchronous", "network-programming", "caching", "database"]
keywords = [ "cache", "redis", "memcache", "twemproxy"]
edition="2018"

[[bin]]
name = "aster-proxy"
path = "bin/proxy.rs"

[lib]
name = "libaster"
path = "src/lib.rs"

# [[bench]]
# name="aster_bench"
# harness = false

[dev-dependencies]
criterion = "0.2"
assert2 = "0.1.1"

[dependencies]
aho-corasick = "0.7.15"
bitflags = "1.2.1"
btoi = "0.4.2"
bytes = "1.0.1"
chrono = "0.4.19"
clap = "2.33.3"
env_logger = "0.8.2"
failure = "0.1.8"
get_if_addrs = "0.5.3"
itoa = "0.4.7"
lazy_static = "1.4.0"
log = "0.4.13"
md5 = "0.7.0"
num_cpus = "1.13.0"
prometheus = "0.11.0"
rand = "0.8.2"
rayon = "1.5.0"
serde = "1.0.122"
serde_derive = "1.0.122"
tokio = "1.1.0"
toml = "0.5.8"

[profile.release]
debug = true
lto = true
