[package]
name = "aster-proxy"
version = "1.3.4"
authors = ["wayslog <zxs867179@gmail.com>"]
description = "A light, fast and powerful cache proxy written in Rust."
homepage = "https://github.com/wayslog/aster"
repository = "https://github.com/wayslog/aster"
documentation = "https://docs.rs/aster"
license = "MIT"
readme = "README.md"
categories = ["asynchronous", "network-programming", "caching", "database"]
keywords = ["cache", "redis", "proxy"]
edition = "2021"

[[bin]]
name = "aster-proxy"
path = "bin/proxy.rs"

[lib]
name = "libaster"
path = "src/lib.rs"

[dependencies]

[profile.release]
debug = true
lto = true

