[package]
name = "aster-proxy"
version = "1.3.4"
authors = ["wayslog <zxs867179@gmail.com>"]
description = "A light, fast and powerful cache proxy written in Rust."
homepage = "https://github.com/wayslog/aster"
repository = "https://github.com/wayslog/aster"
documentation = "https://docs.rs/aster"
license = "MIT"
readme = "README.md"
categories = ["asynchronous", "network-programming", "caching", "database"]
keywords = ["cache", "redis", "proxy"]
edition = "2021"

[[bin]]
name = "aster-proxy"
path = "bin/proxy.rs"

[lib]
name = "libaster"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.4", features = ["derive"] }
once_cell = "1.18"
axum = { version = "0.7", default-features = false, features = ["tokio", "http1"] }
prometheus = "0.13"
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.29"
toml = "0.8"
tokio = { version = "1.34", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
async-trait = "0.1"
dashmap = "5"
parking_lot = "0.12"
bytes = "1"
tokio-util = { version = "0.7", features = ["codec"] }
crc16 = "0.4"
futures = "0.3"
md5 = "0.7"
rand = "0.8"

[profile.release]
debug = true
lto = true
