[package]
name = "libaster"
version = "1.0.3"
authors = ["wayslog <zxs867179@gmail.com>"]
description = "A light, fast and powerful cache proxy written in Rust."
homepage = "https://github.com/wayslog/aster"
repository = "https://github.com/wayslog/aster"
documentation = "https://docs.rs/libaster"
license = "MIT"
readme = "README.md"
categories = ["asynchronous", "network-programming", "caching", "database"]
keywords = [ "cache", "redis", "memcache", "twemproxy"]
edition="2018"

[features]
default = []

metrics = ["prometheus", "actix-web", "actix-rt", "sysinfo"]

[[bench]]
name="aster_bench"
harness = false

[dev-dependencies]
criterion = "0.2"

[dependencies]
byteorder = "1.3.2"
tokio = "0.1"
tokio-codec="0.1"
log="0.4"
env_logger="0.6"
bytes="0.4"
lazy_static="1.1"
btoi="0.4"
futures= "0.1"
toml="0.4"
serde="1.0"
serde_derive="1.0"
itoa= "0.4.4"
net2="0.2"
md5="0.6"
hashbrown = "0.3.0"
num_cpus = "1.8"
failure="0.1"
slab="0.4"
bitflags = "1.0.4"
aho-corasick = "0.7.6"
rand = "0.7.1"
clap = {version = "2.33.0", features = ["yaml"]}

prometheus = {version = "0.7.0", optional=true}
actix-web = {version = "1.0", optional=true}
actix-rt = {version = "0.2.5", optional=true}
sysinfo = {version = "0.9.5", optional=true}